                              MANTIS ENGINE
                                CHANGELOG
================================================================================
Legend
    + new features/additions
    - removed features
    * bug fixes
    # changes to features
================================================================================

0.2.1
=====
+ Entity architecture added alongside stages
+ Hoverable stages
+ Graphical user interface components
    + Button
+ FPS accessor in ME_Framework
+ Clipped font rendering
+ Smooth fonts
+ Alpha blending
+ Linear texture filtering
- Stage backstack

0.1.1
=====
+ Collision check functions in ME_Rectangle
+ Stage backstack
+ Font metrics (width and height) in ME_Graphics
+ Minor accessors in ME_Graphics and ME_Framework
* Framework width and height on window resize
* Framework initial allocation function order